# CoreS3_Squareline_Template

./: README.md  platformio.ini
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  Themes.slt
include/: lv_conf.h
lib/m5gfx_lvgl/: m5gfx_lvgl.cpp
src/: global.hpp  main.cpp  ui_cb.cpp  util.cpp  util.h  wifi_config.hpp  wifi_setup.cpp
src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
src/UI/images/: ui_img_1024934270.c  ui_img_core_text_png.c  ui_img_s3_text_png.c
src/UI/screens/: ui_Main.c  ui_StartUpPage.c  ui_WifiConfigPage.c
